| Bug #48852 | SendBuffer full in SimulatedBlock.cpp should have an error | ||
|---|---|---|---|
| Submitted: | 17 Nov 2009 22:19 | Modified: | 5 Dec 2009 19:36 |
| Reporter: | Andrew Hutchings | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[17 Nov 2009 22:19]
Andrew Hutchings
[4 Dec 2009 8:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/92833 3177 Jonas Oreland 2009-12-04 ndb - bug#48852 - Add enlightning error message when crashing due to out of sendbuffer or longsignalmemory
[4 Dec 2009 9:05]
Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:jonas@mysql.com-20091204090134-c21yoq4yk045xjnf) (version source revid:jonas@mysql.com-20091204090134-c21yoq4yk045xjnf) (merge vers: 5.1.39-ndb-7.1.0) (pib:13)
[4 Dec 2009 9:13]
Jonas Oreland
pushed to 6.3.29 and 7.0.10
[5 Dec 2009 19:36]
Jon Stephens
Documented bugfix in the NDB-6.3.29 and 7.0.10 changelogs as follows:
Exhaustion of send buffer memory or long signal memory caused
data nodes to fail. Now an appropriate error message is
provided instead when this situation occurs.
Closed.
