ndb - bug#48852 -   Add enlightning error message when crashing due to out of sendbuffer     or longsignalmemory