storage/ndb/src/kernel/vm/SimulatedBlock.cpp
@@ -240,6 +240,38 @@ SimulatedBlock::handle_invalid_fragmentInfo(Signal* signal) const
 #endif
 }
 
+void
+SimulatedBlock::handle_out_of_longsignal_memory(Signal * signal) const
+{
+  ErrorReporter::handleError(NDBD_EXIT_OUT_OF_LONG_SIGNAL_MEMORY,
+			     "Out of LongMessageBuffer in sendSignal",
+			     "");
+}
+
+void
+SimulatedBlock::handle_send_failed(SendStatus ss, Signal * signal) const
+{
+  switch(ss){
+  case SEND_BUFFER_FULL:
+    ErrorReporter::handleError(NDBD_EXIT_GENERIC,
+                               "Out of SendBufferMemory in sendSignal", "");
+    break;
+  case SEND_MESSAGE_TOO_BIG:
+    ErrorReporter::handleError(NDBD_EXIT_NDBREQUIRE,
+                               "Message to big in sendSignal", "");
+    break;
+  case SEND_UNKNOWN_NODE:
+    ErrorReporter::handleError(NDBD_EXIT_NDBREQUIRE,
+                               "Unknown node in sendSignal", "");
+    break;
+  case SEND_OK:
+  case SEND_BLOCKED:
+  case SEND_DISCONNECTED:
+    break;
+  }
+  ndbrequire(false);
+}
+
 void 
 SimulatedBlock::sendSignal(BlockReference ref, 
 			   GlobalSignalNumber gsn, 
@@ -311,7 +343,12 @@ SimulatedBlock::sendSignal(BlockReference ref,
 							  recNode, 
 							  (LinearSectionPtr*)0);
     
-    ndbrequire(ss == SEND_OK || ss == SEND_BLOCKED || ss == SEND_DISCONNECTED);
+    if (unlikely(! (ss == SEND_OK ||
+                    ss == SEND_BLOCKED ||
+                    ss == SEND_DISCONNECTED)))
+    {
+      handle_send_failed(ss, signal);
+    }
   }
   return;
 }
@@ -399,7 +436,12 @@ SimulatedBlock::sendSignal(NodeReceiverGroup rg,
 							  &signal->theData[0],
 							  recNode,
 							  (LinearSectionPtr*)0);
-    ndbrequire(ss == SEND_OK || ss == SEND_BLOCKED || ss == SEND_DISCONNECTED);
+    if (unlikely(! (ss == SEND_OK ||
+                    ss == SEND_BLOCKED ||
+                    ss == SEND_DISCONNECTED)))
+    {
+      handle_send_failed(ss, signal);
+    }
   }
 
   return;
@@ -457,10 +499,15 @@ SimulatedBlock::sendSignal(BlockReference ref,
     /**
      * We have to copy the data
      */
+    bool ok = true;
     Ptr<SectionSegment> segptr[3];
     for(Uint32 i = 0; i<noOfSections; i++){
-      ndbrequire(import(segptr[i], ptr[i].p, ptr[i].sz));
+      ok &= import(segptr[i], ptr[i].p, ptr[i].sz);
       signal->theData[length+i] = segptr[i].i;
+    }
+    if (unlikely(! ok))
+    {
+      handle_out_of_longsignal_memory(signal);
     }
     
     globalScheduler.execute(signal, jobBuffer, recBlock,
@@ -493,7 +540,12 @@ SimulatedBlock::sendSignal(BlockReference ref,
 							  &signal->theData[0],
 							  recNode, 
 							  ptr);
-    ndbrequire(ss == SEND_OK || ss == SEND_BLOCKED || ss == SEND_DISCONNECTED);
+    if (unlikely(! (ss == SEND_OK ||
+                    ss == SEND_BLOCKED ||
+                    ss == SEND_DISCONNECTED)))
+    {
+      handle_send_failed(ss, signal);
+    }
   }
 
   signal->header.m_noOfSections = 0;
@@ -557,10 +609,15 @@ SimulatedBlock::sendSignal(NodeReceiverGroup rg,
     /**
      * We have to copy the data
      */
+    bool ok = true;
     Ptr<SectionSegment> segptr[3];
     for(Uint32 i = 0; i<noOfSections; i++){
-      ndbrequire(import(segptr[i], ptr[i].p, ptr[i].sz));
+      ok &= import(segptr[i], ptr[i].p, ptr[i].sz);
       signal->theData[length+i] = segptr[i].i;
+    }
+    if (unlikely(! ok))
+    {
+      handle_out_of_longsignal_memory(signal);
     }
     globalScheduler.execute(signal, jobBuffer, recBlock, gsn);
     
@@ -596,7 +653,12 @@ SimulatedBlock::sendSignal(NodeReceiverGroup rg,
 							  &signal->theData[0],
 							  recNode,
 							  ptr);
-    ndbrequire(ss == SEND_OK || ss == SEND_BLOCKED || ss == SEND_DISCONNECTED);
+    if (unlikely(! (ss == SEND_OK ||
+                    ss == SEND_BLOCKED ||
+                    ss == SEND_DISCONNECTED)))
+    {
+      handle_send_failed(ss, signal);
+    }
   }
   
   signal->header.m_noOfSections = 0;
@@ -687,7 +749,13 @@ SimulatedBlock::sendSignal(BlockReference ref,
 							  recNode,
 							  g_sectionSegmentPool,
 							  sections->m_ptr);
-    ndbrequire(ss == SEND_OK || ss == SEND_BLOCKED || ss == SEND_DISCONNECTED);
+    if (unlikely(! (ss == SEND_OK ||
+                    ss == SEND_BLOCKED ||
+                    ss == SEND_DISCONNECTED)))
+    {
+      handle_send_failed(ss, signal);
+    }
+
     ::releaseSections(noOfSections, sections->m_ptr);
   }
 
@@ -795,7 +863,12 @@ SimulatedBlock::sendSignal(NodeReceiverGroup rg,
 							  recNode,
 							  g_sectionSegmentPool,
 							  sections->m_ptr);
-    ndbrequire(ss == SEND_OK || ss == SEND_BLOCKED || ss == SEND_DISCONNECTED);
+    if (unlikely(! (ss == SEND_OK ||
+                    ss == SEND_BLOCKED ||
+                    ss == SEND_DISCONNECTED)))
+    {
+      handle_send_failed(ss, signal);
+    }
   }
 
   if (release)
@@ -1778,8 +1851,9 @@ SimulatedBlock::sendFirstFragment(FragmentSendInfo & info,
   info.m_callback.m_callbackFunction = 0;
   
   Ptr<SectionSegment> tmp;
-  if(!import(tmp, &signal->theData[0], length)){
-    ndbrequire(false);
+  if(!import(tmp, &signal->theData[0], length))
+  {
+    handle_out_of_longsignal_memory(0);
     return false;
   }
   info.m_theDataSection.p = &tmp.p->theData[0];
@@ -2057,8 +2131,9 @@ SimulatedBlock::sendFirstFragment(FragmentSendInfo & info,
   info.m_callback.m_callbackFunction = 0;
 
   Ptr<SectionSegment> tmp;
-  if(!import(tmp, &signal->theData[0], length)){
-    ndbrequire(false);
+  if(unlikely(!import(tmp, &signal->theData[0], length)))
+  {
+    handle_out_of_longsignal_memory(0);
     return false;
   }
 
@@ -2793,7 +2868,10 @@ SimulatedBlock::sendRoutedSignal(RoutePath path[], Uint32 pathcnt,
     handle.m_ptr[2] = handle.m_ptr[1];
     handle.m_ptr[1] = handle.m_ptr[0];
     Ptr<SectionSegment> tmp;
-    ndbrequire(import(tmp, signal->theData, sigLen));
+    if (unlikely(! import(tmp, signal->theData, sigLen)))
+    {
+      handle_out_of_longsignal_memory(0);
+    }
     handle.m_ptr[0].p = tmp.p;
     handle.m_ptr[0].i = tmp.i;
     handle.m_ptr[0].sz = sigLen;
